fix code analysis warnings